R2503:
======
- fixes for setupenv.sh
- HT16K33 driver update
- update to IDF v5.2.5
- xplane update
- XPT2046 fix
- IDF compatibility updates
- added command for NVS operations

R2501:
======
- update to IDF v5.1.5
- fix SegV on missing argument in atriumcfg
- fix INA226 current calculation
- make explicit if ADC has no sample
- ignore duplicate button configs
- update setupenv.sh and mkatrium.sh for Ubuntu 24.04 LTS
- fixes for threshold configurations
- add basic config merge support
- accept rotary encoders without push button
- add on/off actions for HT16K33
- added support for Xplane
- added Lua function disp_set_mode

R2407:
======
- fix ROMFS missing on 1MB builds

R2406:
======
- fix mDNS regression caused by IDF update

R2404:
======
- revert to IDF v5.1.1 (ESP32), due to console hang
- added support for full Latin1 character set
- fix SSD130x fillRect does not set dirty bits
- fix influx reinit
- fix relay persistency
- 1-wire updates
- more bugfixes

R2403:
======
- gracefully handle kiss-of-death packet of SNTP
- updated DHTxx driver
- added support for AHT10, AHT20
- added support for INA226, INA260
- added support for dynamic font loading
- added new font-tool
- added dynamic font loading support
- added font customization support
- updated fonts to include degree and copyright characters
- updated to IDF v5.1.2
- added display modes list to show only selected views
- added option to suppress Lua initialization
- screen resolution dependent font selection
- added screen customization support
  (change titles, select visible modes)
- adjusted TFTP request size
- updated OPT3001 driver: interrupts and custom configuration
- fix BQ25601D watchdog handling
- fix statemachine init done before all actions are registered
- fix HT16K33 init regression

R2401:
======
- fix DS18B20 negative values
- added I2C driver for ads1x1x

R2312:
======
- fix DS18B20 negative values
- fix ESP32-C3 1-wire regression
- fix for SSD1306 font rendering