@@ -1,7 +1,7 @@
 /****************************************************************************
  * 
  * Code generated by Wire-Format-Compiler (WFC)
- * WFC Version: P2304.20 (hg:476/4f820d9b97ba)
+ * WFC Version: P2304.21 (hg:477/6f02a2b83060)
  * WFC is Copyright 2015-2025, Thomas Maier-Komor
  * 
  * Source Information:
@@ -10,7 +10,7 @@
  * Copyright: 2018-2024
  * Author   : Thomas Maier-Komor
  * 
- * Code generated on 2025-03-30, 14:50:33 (CET).
+ * Code generated on 2025-04-26, 19:32:09 (CET).
  * 
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -1033,6 +1033,7 @@ void ButtonConfig::toASCII(stream &o, bool full, size_t indent) const
 		ascii_bool(o, indent, "presslvl", m_presslvl);
 	}
 	if (full || has_pull_mode()) {
+		ascii_indent(o,indent,"pull_mode");
 		o << "{ // (pull_mode_t) " << (unsigned)m_pull_mode;
 		++indent;
 		gen_indent(o,indent);
@@ -1430,6 +1431,7 @@ void RelayConfig::toASCII(stream &o, bool full, size_t indent) const
 		ascii_numeric(o, indent, "gpio", (signed) m_gpio);
 	}
 	if (full || has_config()) {
+		ascii_indent(o,indent,"config");
 		o << "{ // (relay_cfg_t) " << (unsigned)m_config;
 		++indent;
 		gen_indent(o,indent);
@@ -2829,6 +2831,7 @@ void I2CConfig::toASCII(stream &o, bool full, size_t indent) const
 		for (size_t i = 0, e = s_devices; i != e; ++i) {
 			gen_indent(o,indent);
 			o << '[' << i << "]: ";
+			ascii_indent(o,indent,0);
 			o << "{ // (i2cdev_t) " << (unsigned)m_devices[i];
 			++indent;
 			gen_indent(o,indent);
@@ -3464,6 +3467,7 @@ void LedConfig::toASCII(stream &o, bool full, size_t indent) const
 		ascii_numeric(o, indent, "gpio", (signed) m_gpio);
 	}
 	if (full || has_config()) {
+		ascii_indent(o,indent,"config");
 		o << "{ // (ledcfg_t) " << (unsigned)m_config;
 		++indent;
 		gen_indent(o,indent);
@@ -4376,6 +4380,7 @@ void GpioConfig::toASCII(stream &o, bool full, size_t indent) const
 		ascii_numeric(o, indent, "gpio", (signed) m_gpio);
 	}
 	if (full || has_config()) {
+		ascii_indent(o,indent,"config");
 		o << "{ // (gpiocfg_t) " << (unsigned)m_config;
 		++indent;
 		gen_indent(o,indent);
@@ -5334,6 +5339,7 @@ void SpiBusConfig::toASCII(stream &o, bool full, size_t indent) const
 		ascii_numeric(o, indent, "hold", (signed) m_hold);
 	}
 	if (full || has_options()) {
+		ascii_indent(o,indent,"options");
 		o << "{ // (spiopt_t) " << (unsigned)m_options;
 		++indent;
 		gen_indent(o,indent);
