@@ -1,7 +1,7 @@
 /****************************************************************************
  * 
  * Code generated by Wire-Format-Compiler (WFC)
- * WFC Version: P2304.20 (hg:476/4f820d9b97ba)
+ * WFC Version: P2304.21 (hg:477/6f02a2b83060)
  * WFC is Copyright 2015-2025, Thomas Maier-Komor
  * 
  * Source Information:
@@ -10,7 +10,7 @@
  * Copyright: 2018-2025
  * Author   : Thomas Maier-Komor
  * 
- * Code generated on 2025-03-30, 14:50:33 (CET).
+ * Code generated on 2025-04-26, 19:32:09 (CET).
  * 
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -2589,6 +2589,7 @@ void UartSettings::toASCII(std::ostream &o, bool full, size_t indent) const
 		ascii_numeric(o, indent, "baudrate", m_baudrate);
 	}
 	if (full || has_config()) {
+		ascii_indent(o,indent,"config");
 		o << "{ // (uartcfg_t) " << (unsigned)m_config;
 		++indent;
 		gen_indent(o,indent);
@@ -4517,6 +4518,7 @@ void EventTimer::toASCII(std::ostream &o, bool full, size_t indent) const
 		ascii_numeric(o, indent, "time", m_time);
 	}
 	if (full || has_config()) {
+		ascii_indent(o,indent,"config");
 		o << "{ // (eventcfg_t) " << (unsigned)m_config;
 		++indent;
 		gen_indent(o,indent);
