@@ -1,7 +1,7 @@
 /****************************************************************************
  * 
  * Code generated by Wire-Format-Compiler (WFC)
- * WFC Version: P2304.20 (hg:476/4f820d9b97ba)
+ * WFC Version: P2304.21 (hg:477/6f02a2b83060)
  * WFC is Copyright 2015-2025, Thomas Maier-Komor
  * 
  * Source Information:
@@ -10,7 +10,7 @@
  * Copyright: 2018-2025
  * Author   : Thomas Maier-Komor
  * 
- * Code generated on 2025-03-30, 14:50:33 (CET).
+ * Code generated on 2025-04-26, 19:32:09 (CET).
  * 
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
